--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,157 @@
 // Specific CSS for your home-page
+// banner
+.header{
+	height: 95vh;
+	background-image: linear-gradient( to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)) , image-url('hero.jpg');
+	background-size: cover;
+	background-position: top;
+	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+	position: relative;
+}
+
+.logo-box{
+	position: absolute;
+	top: 20px;
+	left: 20px;
+}
+.logo{
+
+}
+.heading-primary{
+	color: #FFF;
+	text-transform: uppercase;
+	// to avoide the animation  to move/shake the banner
+	backface-visibility: hidden; 
+	margin-bottom: 60px;
+
+
+}
+.heading-primary-main{
+	display: block;
+	font-size: 50px;
+	font-weight: 400;
+	letter-spacing: 35px;
+	animation-name: moveInLeft;
+	animation-duration: 1s;
+	animation-timing-function: ease-out;
+	// animation-delay: 3s;
+	// animation-iteration-count: 3;
+	// animation-timing-function: ease-out; there's other values for this property
+
+}
+.heading-primary-sub{
+	display: block;
+	font-size: 15px;
+	font-weight: 400;
+	letter-spacing: 17.4px;
+	margin-top: 15px;
+	animation: moveInRight 1s ease-out;
+
+
+}
+.text-box{
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%) ;
+	text-align: center;
+}
+
+// animation for banner header
+@keyframes moveInLeft{
+	0%{
+		opacity: 0;
+		transform: translateX(-100px)
+	}
+	80%{
+		transform: translateX(10px)
+	}
+	100%{
+		opacity: 1;
+		transform: translate(0)
+	}
+}
+@keyframes moveInRight{
+	0%{
+		opacity: 0;
+		transform: translateX(100px)
+	}
+	80%{
+		transform: translateX(-10px)
+	}
+	100%{
+		opacity: 1;
+		transform: translate(0)
+	}
+}
+
+
+// buttom animation
+@keyframes moveInButtom{
+	0%{
+		opacity: 0;
+		transform: translateY(100px)
+	
+	}
+	100%{
+		opacity: 1;
+		transform: translate(0)
+	}
+}
+
+
+// banner buttom
+.btn:link,
+.btn:visited{
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 15px 40px;
+	display: inline-block;
+	border-radius: 100px;
+	transition: all .2s;
+	position: relative;
+	animation: moveInButtom 1s ease-out;
+}
+.btn:hover{
+	transform: translateY(-3px);
+	box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+
+.btn:active{
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.btn-white{
+	background-color: #fff;
+	color: #777;
+}
+
+.btn::after{
+	content: "";
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+	border-radius: 100px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	transition: all .4s;
+}
+
+
+.btn-white::after{
+	background-color: #fff;
+}
+
+.btn:hover::after{
+	transform: scaleX(1.4) scaleY(1.6);
+	opacity: 0;
+}
+.btn-animated{
+	animation: moveInButtom .5s ease-out .75s;
+	animation-fill-mode: backwards;
+}
+
+
+
