--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<header class="header">
+	<div class="logo-box">
+		<%= image_tag "logo.png", height: 60, class:"logo" %>
+	</div>
+	<div class="text-box">
+		<h1 class="heading-primary">
+		<span class="heading-primary-main">Outdoors</span>
+		<span class="heading-primary-sub">is where life happens</span>
+		</h1>
+		<%= link_to "Discover our tours", "#", class: "btn btn-white btn-animated" %>
+	</div>
+
+	
+</header>
