--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,12 +9,12 @@
 	position: relative;
 }
 
-.logo-box{
+.header__logo-box{
 	position: absolute;
-	top: 20px;
-	left: 20px;
+	top: 2rem;
+	left: 2rem;
 }
-.logo{
+.header__logo{
 
 }
 .heading-primary{
@@ -22,15 +22,15 @@
 	text-transform: uppercase;
 	// to avoide the animation  to move/shake the banner
 	backface-visibility: hidden; 
-	margin-bottom: 60px;
+	margin-bottom: 6rem;
 
 
 }
-.heading-primary-main{
+.heading-primary--main{
 	display: block;
-	font-size: 50px;
+	font-size: 5rem;
 	font-weight: 400;
-	letter-spacing: 35px;
+	letter-spacing: 3.5rem;
 	animation-name: moveInLeft;
 	animation-duration: 1s;
 	animation-timing-function: ease-out;
@@ -39,17 +39,17 @@
 	// animation-timing-function: ease-out; there's other values for this property
 
 }
-.heading-primary-sub{
+.heading-primary--sub{
 	display: block;
-	font-size: 15px;
+	font-size: 1.5rem;
 	font-weight: 400;
-	letter-spacing: 17.4px;
-	margin-top: 15px;
+	letter-spacing: 1.75rem;
+	margin-top: 1.5rem;
 	animation: moveInRight 1s ease-out;
 
 
 }
-.text-box{
+.header__text-box{
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -61,10 +61,10 @@
 @keyframes moveInLeft{
 	0%{
 		opacity: 0;
-		transform: translateX(-100px)
+		transform: translateX(-10rem)
 	}
 	80%{
-		transform: translateX(10px)
+		transform: translateX(1rem)
 	}
 	100%{
 		opacity: 1;
@@ -74,10 +74,10 @@
 @keyframes moveInRight{
 	0%{
 		opacity: 0;
-		transform: translateX(100px)
+		transform: translateX(10rem)
 	}
 	80%{
-		transform: translateX(-10px)
+		transform: translateX(-1rem)
 	}
 	100%{
 		opacity: 1;
@@ -90,7 +90,7 @@
 @keyframes moveInButtom{
 	0%{
 		opacity: 0;
-		transform: translateY(100px)
+		transform: translateY(10rem)
 	
 	}
 	100%{
@@ -105,23 +105,24 @@
 .btn:visited{
 	text-transform: uppercase;
 	text-decoration: none;
-	padding: 15px 40px;
+	padding: 1.5rem 4rem;
 	display: inline-block;
-	border-radius: 100px;
+	border-radius: 10rem;
 	transition: all .2s;
 	position: relative;
+	font-size: 1.6rem;
 	
 }
 .btn:hover{
-	transform: translateY(-3px);
-	box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+	transform: translateY(-0.3rem);
+	box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
 }
 
 .btn:active{
-	transform: translateY(-1px);
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+	transform: translateY(-0.1rem);
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
-.btn-white{
+.btn--white{
 	background-color: #fff;
 	color: #777;
 }
@@ -131,7 +132,7 @@
 	display: inline-block;
 	height: 100%;
 	width: 100%;
-	border-radius: 100px;
+	border-radius: 10rem;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -140,7 +141,7 @@
 }
 
 
-.btn-white::after{
+.btn--white::after{
 	background-color: #fff;
 }
 
@@ -148,10 +149,48 @@
 	transform: scaleX(1.4) scaleY(1.6);
 	opacity: 0;
 }
-.btn-animated{
+.btn--animated{
 	animation: moveInButtom .5s ease-out .75s;
 	animation-fill-mode: backwards;
 }
+
+
+//section about
+.section-about{
+	background-color: $light-gray;
+	padding: 25rem 0;
+	margin-top: -20vh;
+}
+
+//features section
+
+.section-features{
+	padding: 20rem 0;
+	background-image: linear-gradient( to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)) , image-url('nature.jpg');
+	background-size: cover;
+	transform: skewY(-7deg);
+	margin-top: -10rem;
+	color: #777;
+
+	& > * {
+		transform: skewY(7deg);
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
