--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,48 @@
 <header class="header">
-	<div class="logo-box">
-		<%= image_tag "logo.png", height: 60, class:"logo" %>
+	<div class="header__logo-box">
+		<%= image_tag "logo.png", height: 60, class:"header__logo" %>
 	</div>
-	<div class="text-box">
+	<div class="header__text-box">
 		<h1 class="heading-primary">
-		<span class="heading-primary-main">Outdoors</span>
-		<span class="heading-primary-sub">is where life happens</span>
+		<span class="heading-primary--main">Outdoors</span>
+		<span class="heading-primary--sub">is where life happens</span>
 		</h1>
-		<%= link_to "Discover our tours", "#", class: "btn btn-white btn-animated" %>
+		<%= link_to "Discover our tours", "#", class: "btn btn--white btn--animated" %>
 	</div>
-
-	
 </header>
+
+<section class="section-about">
+	
+</section>
+<section class="section-features">
+	<div class="row">
+		<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="feature-box">
+				<i class="feature-box__icon fas fa-globe "></i>
+				<h3 class="feature-box__heading-tertiary">Explore the world</h3>
+				<p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="feature-box">
+				<i class="feature-box__icon fas fa-compass "></i>
+				<h3 class="feature-box__heading-tertiary">Meet nature</h3>
+				<p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="feature-box">
+				<i class="feature-box__icon fas fa-map "></i>
+				<h3 class="feature-box__heading-tertiary">Find your way</h3>
+				<p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="feature-box">
+				<i class="feature-box__icon fas fa-heart "></i>
+				<h3 class="feature-box__heading-tertiary">Live healthier life</h3>
+				<p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+			</div>
+		</div>
+	</div>
+</section>
